--- a/config/cv_pay/cv.config
+++ b/config/cv_pay/cv.config
@@ -15,34 +15,43 @@ filters = 64
 
 
 [data]
-train_data_path = /data/disk1/private/xcj/cv_pay/data/data
+train_data_path = /data1/private/xcj/cv_pay/data/data
 train_file_list = train.json
 
-valid_data_path = /data/disk1/private/xcj/cv_pay/data/data
+valid_data_path = /data1/private/xcj/cv_pay/data/data
 valid_file_list = test.json
 
-skill_list = /data/disk1/private/xcj/cv_pay/data/skills.txt
-skills_th = 25
+skill_list = /data1/private/xcj/cv_pay/data/skill/skills.txt
+skills_th = 5
 skill_num_per_data = 9
 vec_size = 300
 
-out_dim = 3
-label = requested
+out_dim = 2
+label = realized
 
 sent_max_len = 200
 
+work_history_len = 10
+work_history_num = 18
+
 need_word2vec = False
 
-word2id = /data/disk1/private/xcj/cv_pay/data/wordvec/word2id.json
-word2vec = /data/disk1/private/xcj/cv_pay/data/wordvec/word2vec.txt
+word2id = /data1/private/xcj/cv_pay/data/wordvec/word2id_new.json
+word2vec = /data1/private/xcj/cv_pay/data/wordvec/word2vec_new.txt
+
+skill2id = /data1/private/xcj/cv_pay/data/skill/skill2id.json
+skill2vec = /data1/private/xcj/cv_pay/data/skill/skill_emb.json
 
 formatter =CV
 
 
 [valid]
-valid_out = True
-valid_out_path = /data/disk1/private/xcj/cv_pay/result/cv_result.txt
+valid_out = False
+valid_out_path = /data1/private/xcj/cv_pay/result/cv_result.txt
 
 [output]
 model_name = cv_pay
+model_path = /data1/private/xcj/cv_pay/model/
+tensorboard_path = /data1/private/xcj/cv_pay/tensorboard
 test_time = 1
+output_time = 1
